# Multi-agent-RAG-system-with-LLM

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  mkdocs.yml
docs/docs/: README.md  contribute.md
playground/CAG/: CacheRag.py  test_catche_rag.py
rag_src/: __init__.py
rag_src/Complete_RAG_Pipeline/: AdaptiveRAG.py  CRAG.py  GraphRAG.py  ReliableRAG.py  RunRAG.py  __init__.py  raptor.py
rag_src/chunker/: __init__.py  base.py  default.py  recursive_splitter.py  semantic_splitter.py  text_splitter.py
rag_src/doc_loader/: __init__.py  base.py  default.py  uncommon_doc_loader.py  universal_doc_loader.py
rag_src/doc_preprocessor/: __init__.py  advanced_preprocessor.py  base.py  default.py
rag_src/embedder/: __init__.py  base.py  default.py  gemini_embedder.py  openai_embedder.py
rag_src/evaluator/: __init__.py  base.py  default.py  doc_relevance_evaluator.py  segment_attributor.py
rag_src/indexer/: __init__.py  base.py  chromadb_indexer.py  faiss.py  weaviate_indexer.py
rag_src/llm/: HuggingFace.py  Ollama.py  OpenAI.py  __init__.py  base.py  default.py  gemini.py  graph_Rag_llm.py  groq.py
rag_src/post_retrival_enricher/: __init__.py  base.py  contextual_compression.py  default.py  doc_summarizer.py  self_rerank.py  semantic_filter.py
rag_src/pre_embedding_enricher/: __init__.py  base.py  default.py  metadata_injector.py  qa_pair_generator.py  topic_tagger.py
rag_src/query_transformer/: __init__.py  base.py  decomposer.py  default.py  hyde.py  multiquery.py  web_query_transformer.py
rag_src/retriever/: FusionRetrieval.py  NeighborRetrieval.py  __init__.py  base.py  default.py  explainable.py  rerank.py
rag_src/web_retriever/: __init__.py  base.py  duckduckgo_retriever.py  hybrid_web_retriever.py  servapi_retriever.py  tavily_retriever.py
tests/test_Complete_pipeline/: test_AdaptiveRAG.py  test_CRAG.py  test_GraphRAG.py  test_Reliable_RAG.py  test_RunRAG.py
tests/test_chunker/: test_chunker_default.py  test_recursive_splitter.py  test_semantic_splitter.py  test_text_splitter.py
tests/test_doc_loader/: test_doc_loader_default.py  test_uncommon_doc_loader.py  test_universal_doc_loader.py
tests/test_doc_preprocessor/: test_advanced_preprocessor.py  test_doc_preproccesor_default.py
tests/test_embedder/: test_embeddor_default.py  test_gemini_embedder.py  test_openai_embedder.py
tests/test_evaluator/: test_doc_relevance_evaluator.py  test_evaluator_default.py  test_segment_attributor.py
tests/test_indexer/: test_chromadb_indexer.py  test_indexer_default.py  test_weaviate_indexer.py
tests/test_llm/: test_Hugging_face.py  test_gemini.py  test_graph_RAG_llm.py  test_groq.py  test_llm_default.py
tests/test_post_retrival_enricher/: test_contextual_compression.py  test_post_retrival_enricher_default.py  test_self_rerank.py  test_semantic_filter.py  (+1 more)
(+52 files in other folders)
